--- a/Files/TUTORIAL.html
+++ b/Files/TUTORIAL.html
@@ -10,7 +10,8 @@
 
 <div class="Bg" id="tutorial">
 
-<img src="IMG/Tutorial.jpg" />
+<img src="IMG/Tutorial.jpg" id="comp"/>
+<img src="IMG/Tutorial2.png" id="mobile" />
 </div>
 
 </body>
