--- a/Files/TUTORIAL.html
+++ b/Files/TUTORIAL.html
@@ -3,6 +3,7 @@
 <head>
 <title>Tutorial</title>
 <link rel="stylesheet" href="CSS/dec.css">
+<link rel="shortcut icon" type="x-icon" href="IMG/fish.png">
 </head>
 
 <body>
