--- a/Index.html
+++ b/Index.html
@@ -2,6 +2,7 @@
 <head>
 <title>Jeevit Nadi Game</title>
 <link rel="stylesheet" href="Files/CSS/dec.css">
+<link rel="shortcut icon" type="x-icon" href="Files/IMG/fish.png">
 </head>
 
 
