--- a/Files/TUTORIAL.html
+++ b/Files/TUTORIAL.html
@@ -12,7 +12,9 @@
 <div class="Bg" id="tutorial">
 
 <img src="IMG/Tutorial.jpg" id="comp"/>
+<img src="IMG/Tutorial3.png" id="mobile1" />
 <img src="IMG/Tutorial2.png" id="mobile" />
+
 </div>
 
 </body>
