--- a/Files/TUTORIAL.html
+++ b/Files/TUTORIAL.html
@@ -6,7 +6,7 @@
 <link rel="shortcut icon" type="x-icon" href="IMG/fish.png">
 </head>
 
-<body>
+<body style="background:#0047EA">
 <form><button class = "button" id="back" type ="submit"  formaction="../Index.html">BACK</button></form>
 
 <div class="Bg" id="tutorial">
