--- a/Files/Game.html
+++ b/Files/Game.html
@@ -1,14 +1,14 @@
 <html>
-<meta name="viewport" content="user-scalable=no">
+
 <head>
 <title>Game</title>
 <link rel="stylesheet" href="CSS/dec.css">
 <link rel="shortcut icon" type="x-icon" href="IMG/fish.png">
 </head>
 
-<body>
+<body style = "background:#0047EA" >
 <form><button class = "button" type ="submit" id="back" formaction="../Index.html">BACK</button></form>
-<center><canvas id="can" width="750" height="800" style="border:1px solid #000000;" ></canvas></center>
+<center><canvas id="can" width="750" height="800" style="border:5px solid #000;" ></canvas></center>
 
 <div class="Game_button">
  <div class="Up">
