--- a/Files/Game.html
+++ b/Files/Game.html
@@ -1,7 +1,6 @@
 <html>
-
+<meta name="viewport" content="user-scalable=no" />
 <head>
- <meta content="user-scalable=no">
 <title>Game</title>
 <link rel="stylesheet" href="CSS/dec.css">
 <link rel="shortcut icon" type="x-icon" href="IMG/fish.png">
